Repair listing multi-repo view
I think GitHub must have changed the markup surrounding the build status
so it's now directly under the parent list element.

With the current markup, I can't see that anything looks broken now that
still needs fixing around the status element, so I think we can just
remove this.

--- a/content.css
+++ b/content.css
@@ -59,13 +59,6 @@ a.github-pull-request-colorizer--repository {
   border-bottom-width: 1px;
 }
 
-.github-pull-request-colorizer--multi-repo
-  .github-pull-request-colorizer--build-status-parent {
-  position: absolute;
-  left: 176px;
-  top: 9px;
-}
-
 .github-pull-request-colorizer--highlight {
   background-color: var(--bgColor-attention-muted) !important;
   border-top: 1px solid var(--borderColor-muted) !important;
